--- a/index.html
+++ b/index.html
@@ -434,6 +434,200 @@
     </div>
 </section>
 
+<section class="section">
+    <div class="container is-max-desktop">
+
+        <div class="columns is-centered has-text-centered">
+            <h2 class="title is-2">Demonstrations</h2>
+            <br>
+        </div>
+
+        <div class="columns is-centered">
+            <div class="column is-full-width">
+                <br />
+
+                <!--            Example-1-->
+                <h3 class="title is-4" style="margin-top: 0em">• Example-1: Bike flow prediction (Zero-shot scenario)</h3>
+
+                <div class="content has-text-justified" style="width: 70pm">
+
+                    <div class="content has-text-justified" style="width: 70pm;margin-top: 1.5em">
+
+                        <div class="wrapper svelte-nab2ao"
+                            style="box-sizing: border-box;border-width: 2px;border-style: solid;border-color: #f66c0f;border-radius: 11px;padding: 25px;padding-top: 30px;padding-bottom: 30px;">
+
+                            <div class="message-wrap svelte-1uvwjgr" style="width: 100%;">
+                                <!-- <div class="md svelte-9tftx4 chatbot" style="text-align: left">
+                                    <p style="margin-top: 0.5em;">voice prompt (to clone): </p>
+                                    </p>
+                                </div> -->
+                                <div class="message-row user-row svelte-1uvwjgr" style="width: 100%;">
+                                    <div class="avatar-container svelte-1uvwjgr">
+                                        <img class="avatar-image svelte-1uvwjgr" src="./static/images/user.png"
+                                            alt="avatar-user">
+                                    </div>
+                                    <div data-testid="user" class="message user svelte-1uvwjgr" dir="ltr"
+                                        style="border-style: solid;">
+                                        <!-- 下面的span靠右对齐 -->
+                                        <span class="md svelte-9tftx4 chatbot" style="text-align: left;">
+                                            <p>Given the historical data for bike flow over 12 time steps in a specific region of New York City, 
+                                                the recorded bike inflows are <b>[12 8 9 15 10 12 14 9 6 12 25 20]</b>, 
+                                                and the recorded bike outflows are <b>[5 12 12 15 10 11 6 9 4 6 10 15]</b>. The recording time of the historical data is 'January 14, 2020, 12:00, Tuesday to January 14, 2020, 17:30, Tuesday, with data points recorded at 30-minute intervals'. Here is the region information: This region is located within the Staten Island borough district and encompasses various POIs within a one-kilometer radius, covering Education Facility, Cultural Facility, Commercial, Transportation Facility categories. We now aim to predict the bike inflow and outflow for the next 12 time steps during the time period of 'January 14, 2020, 18:00, Tuesday to January 14, 2020, 23:30, Tuesday, with data points recorded at 30-minute intervals'. To improve prediction accuracy, a spatio-temporal model is utilized to encode the historical bike data as tokens <ST_HIS>, where the first and the second tokens correspond to the representations of bike inflow and outflow. Please conduct an analysis of the traffic patterns in this region, taking into account the provided time and regional information, and then generate the predictions.</p>
+                                        </span>
+                                    </div>
+                                </div>
+
+
+                                <div class="message-row bot-row svelte-1uvwjgr">
+                                    <div class="avatar-container svelte-1uvwjgr">
+                                        <img class="avatar-image svelte-1uvwjgr" src="./static/images/bot.png"
+                                            alt="avatar-bot">
+                                    </div>
+                                    <div data-testid="bot" class="message bot svelte-1uvwjgr" dir="ltr"
+                                        style="border-style: solid;">
+                                        <span class="md svelte-9tftx4 chatbot">
+                                            <p>Based on the given information, the predictions of bike inflow and outflow in this region are 
+                                                <b>[20 21 22 21 17 12 9 7 6 5 5 5]</b> and <b>[11 10 8 7 6 6 5 4 4 3 3 2]</b>.</p>
+                                            <p style="color: gray; font-size: 1.0em;">Ground True: <b>[26 38 28 24 20 13 16 9 5 3 5 2]</b> and <b>[12 19 10 10 11 9 6 5 4 4 2 2]</b>.</p>
+                                        </span>
+                                    </div>
+                                </div>
+
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <!--            Example-2-->
+                <h3 class="title is-4" style="margin-top: 0em">• Example-2: Taxi flow prediction (Zero-shot scenario)</h3>
+
+                <div class="content has-text-justified" style="width: 70pm">
+
+                    <div class="content has-text-justified" style="width: 70pm;margin-top: 1.5em">
+
+                        <div class="wrapper svelte-nab2ao"
+                            style="box-sizing: border-box;border-width: 2px;border-style: solid;border-color: #f66c0f;border-radius: 11px;padding: 25px;padding-top: 30px;padding-bottom: 30px;">
+
+                            <div class="message-wrap svelte-1uvwjgr" style="width: 100%;">
+                                <!-- <div class="md svelte-9tftx4 chatbot" style="text-align: left">
+                                    <p style="margin-top: 0.5em;">voice prompt (to clone): </p>
+                                    </p>
+                                </div> -->
+                                <div class="message-row user-row svelte-1uvwjgr" style="width: 100%;">
+                                    <div class="avatar-container svelte-1uvwjgr">
+                                        <img class="avatar-image svelte-1uvwjgr" src="./static/images/user.png"
+                                            alt="avatar-user">
+                                    </div>
+                                    <div data-testid="user" class="message user svelte-1uvwjgr" dir="ltr"
+                                        style="border-style: solid;">
+                                        <!-- 下面的span靠右对齐 -->
+                                        <span class="md svelte-9tftx4 chatbot" style="text-align: left;">
+                                            <p>Given the historical data for taxi flow over 12 time steps in a specific region of New York City, 
+                                                the recorded taxi inflows are <b>[111 86 90 78 49 75 46 32 20 14 9 9]</b>, 
+                                                and the recorded taxi outflows are <b>[100 91 58 39 47 47 19 22 21 9 16 10]</b>. The recording time of the historical data is 'January 5, 2020, 20:30, Sunday to January 6, 2020, 02:00, Monday, with data points recorded at 30-minute intervals'. Here is the region information: No description is available for this region. Now we want to predict the taxi inflow and outflow for the next 12 time steps during the time period of 'January 6, 2020, 02:30, Monday to January 6, 2020, 08:00, Monday, with data points recorded at 30-minute intervals'. To improve prediction accuracy, a spatio-temporal model is utilized to encode the historical taxi data as tokens <ST_HIS>, where the first and the second tokens correspond to the representations of taxi inflow and outflow. Please conduct an analysis of the traffic patterns in this region, taking into account the provided time and regional information, and then generate the predictions.</p>
+                                        </span>
+                                    </div>
+                                </div>
+
+
+                                <div class="message-row bot-row svelte-1uvwjgr">
+                                    <div class="avatar-container svelte-1uvwjgr">
+                                        <img class="avatar-image svelte-1uvwjgr" src="./static/images/bot.png"
+                                            alt="avatar-bot">
+                                    </div>
+                                    <div data-testid="bot" class="message bot svelte-1uvwjgr" dir="ltr"
+                                        style="border-style: solid;">
+                                        <span class="md svelte-9tftx4 chatbot">
+                                            <p>Based on the given information, the predictions of taxi inflow and outflow in this region are 
+                                                <b>[4 4 2 3 4 13 25 39 56 80 101 117]</b> and <b>[6 4 2 2 4 13 24 39 56 80 100 115]</b>.</p>
+                                            <p style="color: gray; font-size: 1.0em;">Ground True: <b>[9 3 3 4 6 3 30 22 58 74 91 110]</b> and <b>[5 10 7 15 11 19 43 46 90 146 213 187]</b>.</p>
+                                        </span>
+                                    </div>
+                                </div>
+
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <!--            Example-2-->
+                <h3 class="title is-4" style="margin-top: 0em">• Example-3: Crime prediction (Zero-shot scenario)</h3>
+
+                <div class="content has-text-justified" style="width: 70pm">
+
+                    <div class="content has-text-justified" style="width: 70pm;margin-top: 1.5em">
+
+                        <div class="wrapper svelte-nab2ao"
+                            style="box-sizing: border-box;border-width: 2px;border-style: solid;border-color: #f66c0f;border-radius: 11px;padding: 25px;padding-top: 30px;padding-bottom: 30px;">
+
+                            <div class="message-wrap svelte-1uvwjgr" style="width: 100%;">
+                                <!-- <div class="md svelte-9tftx4 chatbot" style="text-align: left">
+                                    <p style="margin-top: 0.5em;">voice prompt (to clone): </p>
+                                    </p>
+                                </div> -->
+                                <div class="message-row user-row svelte-1uvwjgr" style="width: 100%;">
+                                    <div class="avatar-container svelte-1uvwjgr">
+                                        <img class="avatar-image svelte-1uvwjgr" src="./static/images/user.png"
+                                            alt="avatar-user">
+                                    </div>
+                                    <div data-testid="user" class="message user svelte-1uvwjgr" dir="ltr"
+                                        style="border-style: solid;">
+                                        <!-- 下面的span靠右对齐 -->
+                                        <span class="md svelte-9tftx4 chatbot" style="text-align: left;">
+                                            <p>Given the historical data for crime over 12 time steps in a specific region of New York City, 
+                                                the recorded number of burglaries is <b>[1 0 1 2 0 0 1 0 0 3 1 1]</b>, 
+                                                and the recorded number of larcenies is <b>[4 5 3 2 2 2 3 4 2 3 0 4]</b>. The recording time of the historical data is 'October 20, 2020, 00:00, Tuesday to October 31, 2020, 00:00, Saturday, with data points recorded at 1-day intervals'. Here is the region information: No description is available for this region. Now we aim to predict whether the two specific crimes will occur in this region within the next 12 time steps during the time period of 'November 1, 2020, 00:00, Sunday to November 12, 2020, 00:00, Thursday, with data points recorded at 1-day intervals'. To improve prediction accuracy, a spatio-temporal model is utilized to encode the historical crime data as tokens <ST_HIS>, where the first and the second tokens correspond to the representations of burglaries and larcenies. Please conduct an analysis of the crime patterns in this region, considering the provided time and regional information, and then generate the prediction of crime occurrence probability.</p>
+                                        </span>
+                                    </div>
+                                </div>
+
+
+                                <div class="message-row bot-row svelte-1uvwjgr">
+                                    <div class="avatar-container svelte-1uvwjgr">
+                                        <img class="avatar-image svelte-1uvwjgr" src="./static/images/bot.png"
+                                            alt="avatar-bot">
+                                    </div>
+                                    <div data-testid="bot" class="message bot svelte-1uvwjgr" dir="ltr"
+                                        style="border-style: solid;">
+                                        <span class="md svelte-9tftx4 chatbot">
+                                            <p>Based on the given information, the predictions of crime occurrence probability in this region are 
+                                                <b>[0.46 0.46 0.48 0.50 0.49 0.50 0.51 0.5 0.49 0.5 0.49 0.49]</b> and <b>[0.79 0.83 0.84 0.85 0.87 0.89 0.89 0.87 0.87 0.87 0.86 0.85]</b>.</p>
+                                            <p style="color: gray; font-size: 1.0em;">Ground True: <b>[0 0 0 0 0 1 0 0 0 1 0 0]</b> and <b>[2 3 1 2 3 3 1 1 2 3 2 2]</b>. (Greater than 0.5 is considered as occurrence, while less than 0.5 is considered as non-occurrence.)</p>
+                                        </span>
+                                    </div>
+                                </div>
+
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+
+
+
+
+
+
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <br />
+            </div>
+        </div>
+</section>
+                <!--          End  Example-1-->
+
 
 <!-- <section class="section">
     <div class="container is-max-desktop">
