--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
                             <!-- Video Link. -->
                             <span class="link-block">
-                <a href="#"
+                <a href="https://www.youtube.com/watch?v=4BIbQt-EIAM"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-youtube"></i>
@@ -155,7 +155,7 @@
             <div class="column is-full-width">
                 <h2 class="title is-2">Video Presentation</h2>
                 <div class="publication-video">
-                    <iframe src="https://www.youtube.com/embed/DXonSlOwvUc"
+                    <iframe src="https://www.youtube.com/embed/4BIbQt-EIAM"
                             frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 </div>
             </div>
