--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <div class="publication-links">
                             <!-- PDF Link. -->
                             <span class="link-block">
-                <a href="#"
+                <a href="https://github.com/HKUDS/UrbanGPT/blob/main/UrbanGPT_arxiv.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
